--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
         <h1>Kết quả của đoạn mã hóa mình cho cậu là: "do cau giai duoc cau nay"</h1><br>
         <br>
         <br><h1> Đây là ảnh của cậu được vẽ bằng các kí tự ASCII</h1><br>
-        <img src="C:\Users\tamki\Downloads\ca.png ">
+        <img src="C:\Users\tamki\Documents\data visual studio\anh\img\ca.png ">
         <br>
         <br>
         <br>
         <br><h1> Và cả đây nữa</h1><br>
-        <br><img src="C:\Users\tamki\Downloads\ca2.png "><br>
+        <br><img src="C:\Users\tamki\Documents\data visual studio\anh\img\ca2.png "><br>
         <br><h1> Còn đây là ảnh phóng to các để nhìn rõ các kí tự trong ảnh của cậu </h1><br>
-        <br><img src="C:\Users\tamki\Downloads\ca3.png "><br>
+        <br><img src="C:\Users\tamki\Documents\data visual studio\anh\img\ca3.png "><br>
         <br><h1> khi nào tâm trạng cậu tốt rồi thì nhớ nhắn cho mình đấy nhé, chỉ gần gửi "." là mình rep lại tin nhắn cậu</h1><br>
         <br><h1>....Cậu nhớ đấy nhé....</h1>
-        <br><img src="C:\Users\tamki\Downloads\ca4.jpg ">
+        <br><img src="C:\Users\tamki\Documents\data visual studio\anh\imgca4.jpg ">
         <br><h1>.Do nay mình bận nên mình gửi cho cậu hơi muộn</h1>
     </div>    
 </body>
