--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <br>
         <br>
         <br><h1> Và cả đây nữa</h1><br>
-        <br><img src="https://8nottam.github.io/tang-ca/img\ca2.png "><br>
+        <br><img src="https://github.com/8nottam/tang-ca/blob/master/img/ca2.png"><br>
         <br><h1> Còn đây là ảnh phóng to các để nhìn rõ các kí tự trong ảnh của cậu </h1><br>
         <br><img src="https://github.com/8nottam/tang-ca/blob/master/img/ca3.png"><br>
         <br><h1> khi nào tâm trạng cậu tốt rồi thì nhớ nhắn cho mình đấy nhé, chỉ gần gửi "." là mình rep lại tin nhắn cậu</h1><br>
