--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <br><img src="https://github.com/8nottam/tang-ca/blob/master/img/ca3.png"><br>
         <br><h1> khi nào tâm trạng cậu tốt rồi thì nhớ nhắn cho mình đấy nhé, chỉ gần gửi "." là mình rep lại tin nhắn cậu</h1><br>
         <br><h1>....Cậu nhớ đấy nhé....</h1>
-        <br><img src="https://github.com/8nottam/tang-ca/blob/master/img/ca4.jpg">
+        <br><img src="https://8nottam.github.io/tang-ca/img/ca4.jpg">
         <br><h1>.Do nay mình bận nên mình gửi cho cậu hơi muộn</h1>
     </div>    
 </body>
