--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
         <h1>Kết quả của đoạn mã hóa mình cho cậu là: "do cau giai duoc cau nay"</h1><br>
         <br>
         <br><h1> Đây là ảnh của cậu được vẽ bằng các kí tự ASCII</h1><br>
-        <img src="https://github.com/8nottam/tang-ca/blob/master/img/ca.png">
+        <img src="ca.png">
         <br>
         <br>
         <br>
         <br><h1> Và cả đây nữa</h1><br>
-        <br><img src="https://github.com/8nottam/tang-ca/blob/master/img/ca2.png"><br>
+        <br><img src="ca2.png"><br>
         <br><h1> Còn đây là ảnh phóng to các để nhìn rõ các kí tự trong ảnh của cậu </h1><br>
         <br><img src="ca3.png"><br>
         <br><h1> khi nào tâm trạng cậu tốt rồi thì nhớ nhắn cho mình đấy nhé, chỉ gần gửi "." là mình rep lại tin nhắn cậu</h1><br>
         <br><h1>....Cậu nhớ đấy nhé....</h1>
         <br><img src="ca4.jpg">
-        <br><h1>.Do nay mình bận nên mình gửi cho cậu hơi muộn</h1>
+        <br><h1>Do nay mình bận nên mình gửi cho cậu hơi muộn</h1>
     </div>    
 </body>
 </html>
