--- a/index.html
+++ b/index.html
@@ -17,22 +17,12 @@
     </style>
 </head>
 <body>
-    <div class="content">
-        <h1>Kết quả của đoạn mã hóa mình cho cậu là: "do cau giai duoc cau nay"</h1><br>
-        <br>
-        <br><h1> Đây là ảnh của cậu được vẽ bằng các kí tự ASCII</h1><br>
-        <img src="ca.png">
-        <br>
-        <br>
-        <br>
-        <br><h1> Và cả đây nữa</h1><br>
-        <br><img src="ca2.png"><br>
-        <br><h1> Còn đây là ảnh phóng to các để nhìn rõ các kí tự trong ảnh của cậu </h1><br>
-        <br><img src="ca3.png"><br>
-        <br><h1> khi nào tâm trạng cậu tốt rồi thì nhớ nhắn cho mình đấy nhé, chỉ gần gửi "." là mình rep lại tin nhắn cậu</h1><br>
-        <br><h1>....Cậu nhớ đấy nhé....</h1>
-        <br><img src="ca4.jpg">
-        <br><h1>Do nay mình bận nên mình gửi cho cậu hơi muộn</h1>
-    </div>    
+    <h1> Nhật ký thường ngày của bát dành cho Cá </h1><br>
+    <br><p>Hôm nay là ngày 14-09-2024: Ngày đầu tiên<br>
+    Hôm nay cũng là ngày đầu tiên mình viết nhật ký này!<br>
+    Mấy hôm nay mình hồ đồ quá. Bản thân mình cũng chẳng hiểu sao mình lại như vậy nữa, cứ liên tiếp làm cậu khó chịu, không vui....<br>
+    Thấy cậu như vậy mình cũng tự trách bản thân mình, mình là 1 người tồi thật mà. Nhưng mình vẫn đang cố thay đổi cái tính cách này muốn đẩy nó ra cuộc đời mình và không làm cậu phải buồn phiền vì 1 điều gì nữa.... mình vẫn đang cố gắng 😔<br>
+    Mình sợ cậu sẽ không còn ở bên mình nữa, mình cũng không muốn đánh mất cậu.<br>
+    </p>
 </body>
 </html>
