--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
     Mấy hôm nay mình hồ đồ quá. Bản thân mình cũng chẳng hiểu sao mình lại như vậy nữa, cứ liên tiếp làm cậu khó chịu, không vui....<br>
     Thấy cậu như vậy mình cũng tự trách bản thân mình, mình là 1 người tồi thật mà. Nhưng mình vẫn đang cố thay đổi cái tính cách này muốn đẩy nó ra cuộc đời mình và không làm cậu phải buồn phiền vì 1 điều gì nữa.... mình vẫn đang cố gắng 😔<br>
     Mình sợ cậu sẽ không còn ở bên mình nữa, mình cũng không muốn đánh mất cậu.<br>
+    - Cập nhật: hiện giờ đang là 10:54 rồi<br>
+    Mình cũng khá là buồn nhưng mà không trách cậu được mà chỉ trách bản thân mình không nhận ra sớm hơn để sửa nó sớm hơn trước khi mọi chuyện ra như này.<br>
+    Cậu không còn là cậu của ngày xưa nữa rồi, không còn yêu mình hay thích mình nữa mà xem mình như người bạn, cậu nói cậu không còn trông đợi gì ở mình nữa, lúc đấy mình hụt hẫng lắm...<br>
+    Chắc đêm nay lại 1 đêm buồn thức rắng rồi đây...Mình thực sự rất nhớ cậu, mình yêu cậu.....Mình đang khóc rồi, tại sao lại như vậy chứ mình hối hận quá, mình không nhận ra nó sớm hơn để sửa lại mọi chuyện trước khi quá muộn 😥 <br>
+    Nhưng tình yêu của mình vẫn còn đó thôi, mình vẫn sẽ yêu cậu, vẫn mong muốn rằng sau này mình với cậu sẽ về chung 1 nhà...<br>
+    Chắc lúc đấy mình sẽ trưởng thành hơn rất nhiều rồi nên sẽ không để cậu phải chịu tổn thương nào nữa đâu, mình mong là như vậy. <br>
+        Mình yêu cậu !<br>
     </p>
 </body>
 </html>
