--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <body>
     <h1> Nhật ký thường ngày của bát dành cho Cá </h1><br>
     <br><p>Hôm nay là ngày 14-09-2024: Ngày đầu tiên<br>
-    Hôm nay cũng là ngày đầu tiên mình viết nhật ký này!<br>
-    Mấy hôm nay mình hồ đồ quá. Bản thân mình cũng chẳng hiểu sao mình lại như vậy nữa, cứ liên tiếp làm cậu khó chịu, không vui....<br>
+    <br>Hôm nay cũng là ngày đầu tiên mình viết nhật ký này!<br>
+    <br>Mấy hôm nay mình hồ đồ quá. Bản thân mình cũng chẳng hiểu sao mình lại như vậy nữa, cứ liên tiếp làm cậu khó chịu, không vui....<br>
     Thấy cậu như vậy mình cũng tự trách bản thân mình, mình là 1 người tồi thật mà. Nhưng mình vẫn đang cố thay đổi cái tính cách này muốn đẩy nó ra cuộc đời mình và không làm cậu phải buồn phiền vì 1 điều gì nữa.... mình vẫn đang cố gắng 😔<br>
     Mình sợ cậu sẽ không còn ở bên mình nữa, mình cũng không muốn đánh mất cậu.<br>
     - Cập nhật: hiện giờ đang là 10:54 rồi<br>
@@ -30,6 +30,16 @@
     Nhưng tình yêu của mình vẫn còn đó thôi, mình vẫn sẽ yêu cậu, vẫn mong muốn rằng sau này mình với cậu sẽ về chung 1 nhà...<br>
     Chắc lúc đấy mình sẽ trưởng thành hơn rất nhiều rồi nên sẽ không để cậu phải chịu tổn thương nào nữa đâu, mình mong là như vậy. <br>
         Mình yêu cậu !<br>
+    <br> Ngày 15/09/2024: Ngày thứ 2<br>
+    <br>Giờ đang là 15h43 mình cũng vừa mới xem lại được đoạn video mình gọi cho cậu, cũng nhờ có video đó mà nỗi nhớ của mình được vơi đi chút nào, nhưng nó không có đáng kể 😥 mình muốn nhìn thấy cậu, <br>
+    muốn nói chuyện vứi cậu chứu không phải qua những cái video hay là ảnh nào đó. Mình nhớ cậu lắm rồi, tim mình cũng nhói lắm rồi, nó cứ thôi thúc muốn được gặp cậu...<br>
+    Mình nhớ quá đi à, nhớ cái lần mà cậu nói rằng " nếu có thể tớ cũng muốn được yêu cậu". Mình không thể nào quên được, sáng hôm đó mình dậy mình dậy mình có đọc được lúc đấy cậu biết mình ra sao không mình nhảy lên như 1 người điên chạy qua chạy lại<br>
+    không thể ngồi yên 1 chỗ được hạnh phúc như chưa từng hạnh phúc vậy, mình không biết trả lời lại làm sao cả. Nhưng mình ngồi lại suy nghĩ xem nên trả lời như thế nào thì mình lại nghĩ rằng giờ mà mình yêu vào thì việc học của cô ấy bị ảnh hưởng thì sao, <br>
+    vì trước đó mình thấy cậu có chia sẻ với mình là cậu muốn thi bác sĩ nội trú, mình cũng thấy cậu cố hết sức học, mình sợ rằng yêu vào thì cậu sẽ bị ảnh hưởng, rồi mình nghĩ rằng hay giờ cứ như vậy đi mình vẫn sẽ đợi được mà, để cho cô ấy tập trung thi kì thi nội trú<br>
+    chờ cô ấy thi xong mình sẽ tìm và tỏ tình cô ấy và bắt đầu 1 mối quan hệ nghiêm túc... mình nghĩ như vậy xong thì mình cũng có chút hụt hẫng lắm, vì lúc đấy cũng rất muốn yêu cậu rồi. <br>
+    Rồi sau đó mình quyết định nói ra điều mà mình cũng không mong muốn đó là " vậy hẹn cậu vào một ngày không xa" nó có vẻ bình thản nhỉ nhưng mà mình không biết nói sao hơn nữa, đến mình cũng có chút hụt hẫng...<br>
+    Mình ước rằng mình nói chuyện được nhiều hơn, không né tránh không nhút nhát như bây giờ, để có thể thấu hiểu trong những lời nói hơn, không làm cho cậu phải chịu tổn thương và thấu hiểu cậu qua những dòng tin nhắn hơn...<br>
+    Mình thực sự yêu cậu rất nhiều...<br>
     </p>
 </body>
 </html>
