--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </style>
 </head>
 <body>
-    <h1> Nhật ký thường ngày của bát dành cho Cá </h1><br>
+    <h1> Nhật ký thường ngày của Bát dành cho Cá </h1><br>
     <br><p>Hôm nay là ngày 14-09-2024: Ngày đầu tiên<br>
     <br>Hôm nay cũng là ngày đầu tiên mình viết nhật ký này!<br>
     <br>Mấy hôm nay mình hồ đồ quá. Bản thân mình cũng chẳng hiểu sao mình lại như vậy nữa, cứ liên tiếp làm cậu khó chịu, không vui....<br>
@@ -40,6 +40,9 @@
     Rồi sau đó mình quyết định nói ra điều mà mình cũng không mong muốn đó là " vậy hẹn cậu vào một ngày không xa" nó có vẻ bình thản nhỉ nhưng mà mình không biết nói sao hơn nữa, đến mình cũng có chút hụt hẫng...<br>
     Mình ước rằng mình nói chuyện được nhiều hơn, không né tránh không nhút nhát như bây giờ, để có thể thấu hiểu trong những lời nói hơn, không làm cho cậu phải chịu tổn thương và thấu hiểu cậu qua những dòng tin nhắn hơn...<br>
     Mình thực sự yêu cậu rất nhiều...<br>
+    <br> - Cập nhật: 18:38'<br>
+    Cậu cũng không còn cần những lời nói thân mật của mình nữa rồi... mình hụt hẫng quá.<br>
+    Cậu cũng đã lạnh nhạt với mình...<br>
     </p>
 </body>
 </html>
