--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
     <br> - Cập nhật: 18:38'<br>
     Cậu cũng không còn cần những lời nói thân mật của mình nữa rồi... mình hụt hẫng quá.<br>
     Cậu cũng đã lạnh nhạt với mình...<br>
+    <br> Ngày 16/09/2024: Ngày thứ 3<br>
+    - 9:50 : Ngày hôm nay của mình tệ lắm, mình nhớ cậu thực sự rất nhớ cậu, mỗi lần nhớ cậu nước mắt mình lại rơi, vì... giờ có nói nhớ cậu thì cũng vô ích thôi à 😔 cậu không còn quan tâm điều đó nữa rồi...tim mình đau lắm<br>
     </p>
 </body>
 </html>
