--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
     Cậu cũng đã lạnh nhạt với mình...<br>
     <br> Ngày 16/09/2024: Ngày thứ 3<br>
     - 9:50 : Ngày hôm nay của mình tệ lắm, mình nhớ cậu thực sự rất nhớ cậu, mỗi lần nhớ cậu nước mắt mình lại rơi, vì... giờ có nói nhớ cậu thì cũng vô ích thôi à 😔 cậu không còn quan tâm điều đó nữa rồi...tim mình đau lắm<br>
+    - 23:55 Vậy là sau bao nhiêu hôm thì bây giờ mình cũng được nhẹ nhõm đôi chút rồi. Được nhắn tin bình thường với cậu mình thấy khoảng cách của mình với cậu ở gần nhau hơn. Nhưng mình lại thấy hơi hụt hẫng 1 chút bởi lý do mà cậu chịu ở lại với mình cho tới hôm nay<br>
+    chỉ là vì muốn làm tinh thần của mình tốt hơn mà tôi mà thôi, nhưng mình không cần điều đó. Điều mà mình cần lại chính là cậu, là tình cảm của cậu...<br>
+    Mình yêu cậu.....<br>
+    <br> Ngày 17/09/2024: Ngày thứ 3<br>
+    - 8:38: Sau cuộc trò chuyện hôm qua tâm trạng mình cũng ổn đi khá là nhiều, mình cứ luôn no lắng 1 ngày nào đó cậu rời xa mình...mình nhớ cậu<br>
     </p>
 </body>
 </html>
