--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
     Mình yêu cậu.....<br>
     <br> Ngày 17/09/2024: Ngày thứ 3<br>
     - 8:38: Sau cuộc trò chuyện hôm qua tâm trạng mình cũng ổn đi khá là nhiều, mình cứ luôn no lắng 1 ngày nào đó cậu rời xa mình...mình nhớ cậu<br>
+    <br>Hôm nay cậu cũng đã bình thường trở lạilại, không còn lạnh nhạt với mình nữa<br>
+    <br> Ngày: 18/09/2024<br>
+    Mỗi ngày có cậu đều là 1 ngày bình yên, mong rằng giữa mình với cậu sẽ không xảy ra chuyện gì nữa, mong rằng mình sẽ cẩn trọng hơn không có nói những điều làm cậu tổn thương nữa... mình nhớ cậu quá<br>
     </p>
 </body>
 </html>
