--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
     Mỗi ngày có cậu đều là 1 ngày bình yên, mong rằng giữa mình với cậu sẽ không xảy ra chuyện gì nữa, mong rằng mình sẽ cẩn trọng hơn không có nói những điều làm cậu tổn thương nữa... mình nhớ cậu quá<br>
     <br> Ngày 19/09/2024: Ngày thứ 4: <br>
     Đêm qua nói chuyện với cậu mình suy nghĩ nhiều quá này, mình luôn lo lắng cậu sẽ rời xa cuộc đời mình, chắc có lẽ giờ nó hơn 9 phần mất rồi có lẽ mình đã mù quáng mất rồi, mình không chấp nhận được việc đánh mất cậu. Mình nhớ cậu quá...<br>
+    <br> Hôm nay 20/09/2024 <br>
+    Hôm nay có gửi icon khụy gối hôn mà có lẽ cậu không thích nữa rồi, chắc mình cũng không có giám gửi nữa...<br>
+    Mình nhớ cậu quá đi à, mình muốn ôm cậu <br>
     </p>
 </body>
 </html>
