--- a/index.html
+++ b/index.html
@@ -56,8 +56,11 @@
     <br> Ngày 19/09/2024: Ngày thứ 4: <br>
     Đêm qua nói chuyện với cậu mình suy nghĩ nhiều quá này, mình luôn lo lắng cậu sẽ rời xa cuộc đời mình, chắc có lẽ giờ nó hơn 9 phần mất rồi có lẽ mình đã mù quáng mất rồi, mình không chấp nhận được việc đánh mất cậu. Mình nhớ cậu quá...<br>
     <br> Hôm nay 20/09/2024 <br>
-    Hôm nay có gửi icon khụy gối hôn mà có lẽ cậu không thích nữa rồi, chắc mình cũng không có giám gửi nữa...<br>
+    Hôm nay có gửi icon khụy gối hôn mà có lẽ cậu không thích điều đó, chắc mình cũng không có giám gửi nữa...<br>
     Mình nhớ cậu quá đi à, mình muốn ôm cậu <br>
+    <br> Ngày 21/09/2024: Ngày thứ 5<br>
+    Hôm nay thì tim mình nó lại nhói lên rồi này :v có lẽ nó lại nhớ cậu mãnh liệt rồi, nhưng mình không để nó làm thể hiện ra đầu, với tình hình hiện giờ chắc là lại phải kiềm chế lại rồi...<br>
+    Hôm nay mình có hơi chút stress này code mãi mà chưa có fix được lỗi, deadline thì sắp đến mất rồi... kể mà giờ được quay lại như lúc đầu chúng mình gặp nhau nhỉ, mình hối hận rồi.<br>
     </p>
 </body>
 </html>
