--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
     <br> Ngày 21/09/2024: Ngày thứ 5<br>
     Hôm nay thì tim mình nó lại nhói lên rồi này :v có lẽ nó lại nhớ cậu mãnh liệt rồi, nhưng mình không để nó làm thể hiện ra đầu, với tình hình hiện giờ chắc là lại phải kiềm chế lại rồi...<br>
     Hôm nay mình có hơi chút stress này code mãi mà chưa có fix được lỗi, deadline thì sắp đến mất rồi... kể mà giờ được quay lại như lúc đầu chúng mình gặp nhau nhỉ, mình hối hận rồi.<br>
+    <br> Ngày 22/09/2024: Ngày thứ 6<br>
+    Mong mỗi ngày cứ như vậy, luôn có cậu ở bên cạnh, mình an tâm lắm, hôm nay mình vẫn như mọi ngày thui vẫn nhớ cậu lắm nì, Yêuuuuu cậuuuuuuuu<br>
+    Mấy hôm nay mình mệt quá à, giá mà được gọi nói chuyện với cậu hay được ôm cậu thì hay biết mấy<br>
     </p>
 </body>
 </html>
