--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
     <br> Ngày 22/09/2024: Ngày thứ 6<br>
     Mong mỗi ngày cứ như vậy, luôn có cậu ở bên cạnh, mình an tâm lắm, hôm nay mình vẫn như mọi ngày thui vẫn nhớ cậu lắm nì, Yêuuuuu cậuuuuuuuu<br>
     Mấy hôm nay mình mệt quá à, giá mà được gọi nói chuyện với cậu hay được ôm cậu thì hay biết mấy<br>
+    <br> Ngày 23/09/2024: Ngày thứ 7 <br>
+    Hôm nay được nói chuyện với cậu vui thật đấy, đang mệt mà cũng không còn cảm thấy mệt gì cả, tâm trạng cũng tốt hơn nhiều rồi<br>
+    Mình mong chúng ta sẽ có nhiều ngày như vậy<br>
     </p>
 </body>
 </html>
