--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
     <br> Ngày 23/09/2024: Ngày thứ 7 <br>
     Hôm nay được nói chuyện với cậu vui thật đấy, đang mệt mà cũng không còn cảm thấy mệt gì cả, tâm trạng cũng tốt hơn nhiều rồi<br>
     Mình mong chúng ta sẽ có nhiều ngày như vậy<br>
+    <br> Ngày 24/09/2024: Ngày thứ 8<br>
+    Vậy là sau bao nhiêu ngày căng thẳng thì chúng ta cũng đã bình thường trở lại rồi, mình không biết là sẽ còn phải trải qua giai đoạn đó hay không nữa nhưng mình chẳng muốn nó tới chút nào.<br>
+    Mình yêu cậu rất nhiều...<br>
     </p>
 </body>
 </html>
