--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
     <br> Ngày 24/09/2024: Ngày thứ 8<br>
     Vậy là sau bao nhiêu ngày căng thẳng thì chúng ta cũng đã bình thường trở lại rồi, mình không biết là sẽ còn phải trải qua giai đoạn đó hay không nữa nhưng mình chẳng muốn nó tới chút nào.<br>
     Mình yêu cậu rất nhiều...<br>
+    <br> Ngày 26/09/2024: Ngày thứ 9<br>
+    Mấy nay mình bận chạy deadline quá nên cũng quên không có viết lên đây được, Ngày hôm nay của mình cũng hơi có chút mệt, chắc mấy nay cậu đến tháng nên cũng hơi có chút giận dỗi nhì 😂 mình cũng biết là vậy nên cũng thấy đáng yêu chứ không có trách gì cả, hì<br>
+    Hôm nay mình nhớ cậu lắm, mình yêu cậu<br>
     </p>
 </body>
 </html>
