--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
     <br> Ngày 26/09/2024: Ngày thứ 9<br>
     Mấy nay mình bận chạy deadline quá nên cũng quên không có viết lên đây được, Ngày hôm nay của mình cũng hơi có chút mệt, chắc mấy nay cậu đến tháng nên cũng hơi có chút giận dỗi nhì 😂 mình cũng biết là vậy nên cũng thấy đáng yêu chứ không có trách gì cả, hì<br>
     Hôm nay mình nhớ cậu lắm, mình yêu cậu<br>
+    <br> Ngày 27/09/2024; Ngày thứ 10 <br>
+    Hôm nay thấy cậu có vẻ bận hơn mọi ngày, cũng không có nói chuyện gì nhiều. Nhớ cậu quá đi<br>
     </p>
 </body>
 </html>
