--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
     Hôm nay mình nhớ cậu lắm, mình yêu cậu<br>
     <br> Ngày 27/09/2024; Ngày thứ 10 <br>
     Hôm nay thấy cậu có vẻ bận hơn mọi ngày, cũng không có nói chuyện gì nhiều. Nhớ cậu quá đi<br>
+    <br>Ngày 28/09/2024: Ngày thứ 11<br>
+    Dạo này mình thấy cậu học khá nhiều, chắc cậu áp lực lắm, nay thấy cậu có nói cậu xin đi trực muộn vì đang mệt, mình nghĩ cậu chắc hẳn đang mệt lắm nên mới xin nghỉ vậy mà cậu nói với mình là cậu không sao, không biết có phải cậu đang giấu mình không nữa.<br>
     </p>
 </body>
 </html>
