--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
     Hôm nay thấy cậu có vẻ bận hơn mọi ngày, cũng không có nói chuyện gì nhiều. Nhớ cậu quá đi<br>
     <br>Ngày 28/09/2024: Ngày thứ 11<br>
     Dạo này mình thấy cậu học khá nhiều, chắc cậu áp lực lắm, nay thấy cậu có nói cậu xin đi trực muộn vì đang mệt, mình nghĩ cậu chắc hẳn đang mệt lắm nên mới xin nghỉ vậy mà cậu nói với mình là cậu không sao, không biết có phải cậu đang giấu mình không nữa.<br>
+    <br> Ngày 29/09/2024: Ngày thứ 12<br>
+    Vậy là mai sẽ đến sinh nhật cậu rồi, có xin cậu số của Meo mà cậu không có cho, chắc cậu cũng biết mục đích của mình rồi, hì<br>
     </p>
 </body>
 </html>
