--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
     Dạo này mình thấy cậu học khá nhiều, chắc cậu áp lực lắm, nay thấy cậu có nói cậu xin đi trực muộn vì đang mệt, mình nghĩ cậu chắc hẳn đang mệt lắm nên mới xin nghỉ vậy mà cậu nói với mình là cậu không sao, không biết có phải cậu đang giấu mình không nữa.<br>
     <br> Ngày 29/09/2024: Ngày thứ 12<br>
     Vậy là mai sẽ đến sinh nhật cậu rồi, có xin cậu số của Meo mà cậu không có cho, chắc cậu cũng biết mục đích của mình rồi, hì<br>
+    <br> Ngày 30/09/2024: Ngày thứ 13<br>
+    Vậy là cũng sắp kết thúc 1 ngày sinh nhật của người mà mình yêu rồi, chúc cho mọi điều tốt đẹp sẽ đến với cậu trong cả cuộc đời này, mong rằng chúng ta sẽ mãi bên nhau dù cho mọi chuyện có khó khăn đến đâu đi chăng nữa chúng ta vẫn sẽ trải qua nó được và có thể bên nhau mãi<br>
+    Mình nhớ cậu lắm...mình muốn ôm cậu, lắm tay cậu <br>
     </p>
 </body>
 </html>
