--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
     <br> Ngày 30/09/2024: Ngày thứ 13<br>
     Vậy là cũng sắp kết thúc 1 ngày sinh nhật của người mà mình yêu rồi, chúc cho mọi điều tốt đẹp sẽ đến với cậu trong cả cuộc đời này, mong rằng chúng ta sẽ mãi bên nhau dù cho mọi chuyện có khó khăn đến đâu đi chăng nữa chúng ta vẫn sẽ trải qua nó được và có thể bên nhau mãi<br>
     Mình nhớ cậu lắm...mình muốn ôm cậu, lắm tay cậu <br>
+    <br> ngày 31/09/2024: Ngày thứ 14<br>
+    Hôm nay mình mệc quá đi à, ước được gọi cho cậu 1 chút nhỉ... nhớ cậu chếc mất thôi, hì<br>
+    
     </p>
 </body>
 </html>
