--- a/index.html
+++ b/index.html
@@ -82,9 +82,10 @@
     <br> Ngày 30/09/2024: Ngày thứ 13<br>
     Vậy là cũng sắp kết thúc 1 ngày sinh nhật của người mà mình yêu rồi, chúc cho mọi điều tốt đẹp sẽ đến với cậu trong cả cuộc đời này, mong rằng chúng ta sẽ mãi bên nhau dù cho mọi chuyện có khó khăn đến đâu đi chăng nữa chúng ta vẫn sẽ trải qua nó được và có thể bên nhau mãi<br>
     Mình nhớ cậu lắm...mình muốn ôm cậu, lắm tay cậu <br>
-    <br> ngày 31/09/2024: Ngày thứ 14<br>
+    <br> ngày 01/10/2024: Ngày thứ 14<br>
     Hôm nay mình mệc quá đi à, ước được gọi cho cậu 1 chút nhỉ... nhớ cậu chếc mất thôi, hì<br>
-    
+    <br>Ngày 02/10/2024: Ngày thứ 15<br>
+    Ngày hôm nay trải qua cũng khá là bình thường... à cũng không hơi bình thường lắm nay mình có làm cậu hơi cáu, có hỏi câu ngớ ngẩn làm cậu khó chịu :(...Mình nhớ cậu<br>
     </p>
 </body>
 </html>
