--- a/index.html
+++ b/index.html
@@ -86,10 +86,12 @@
     Hôm nay mình mệc quá đi à, ước được gọi cho cậu 1 chút nhỉ... nhớ cậu chếc mất thôi, hì<br>
     <br>Ngày 02/10/2024: Ngày thứ 15<br>
     Ngày hôm nay trải qua cũng khá là bình thường... à cũng không hơi bình thường lắm nay mình có làm cậu hơi cáu, có hỏi câu ngớ ngẩn làm cậu khó chịu :(...Mình nhớ cậu<br>
-    <br> Ngày 03/09/2024 <br>
+    <br> Ngày 03/09/2024: Ngày thứ 16<br>
     Có thể hôm nay là ngày đỉnh điểm mình nhớ cậu rồi, mình thực sự rất nhớ cậu và tim mình cứ nhói khi nhớ đến cậu, nhưng mà mình thấy có vẻ cậu không thích gọi với mình cho lắm, nên là mình cũng không có giám xin cậu để được gọi đâu, Mình ước rằng mọi chuyện vẫn như trước kia nhỉ <br>
     lúc mà cậu vẫn còn tình cảm với mình nhưng mà lúc đó mình ngốc quá dù mình nhận ra tình cảm của cậu nhưng mình cũng sợ 1 điều gì đấy có lẽ là do tương lai của cậu...1 bác sĩ nội trú nên mình không giám tiến xa, mà lại nghĩ rằng khi nào cậu ra trường thì mới bắt đầu 1 mối quan hệ chính thức với nhau được.<br>
     Lúc mới đầu mình không phải lạnh lùng boy hay là không có quan tâm cậu, mà là cái tính cách của mình, mình không có giỏi trong việc bộc lộ cảm xúc, mình có chút khù khờ, khô khan nhưng trong thâm tâm của mình lại trái ngược với cách mà mình thể hiện, mình rất yêu cậu mình muốn cưới cậu, muốn làm chỗ dựa chăm sóc cho cậu cả đời, và nhiều hơn thế nữa...<br>
+    <br>Hôm nay 02/10/2024: Ngày thứ 17<br>
+    Có vẻ là dạo này cậu cũng khá lạnh nhạt với mình, Không biết có phải cậu thấy mình phiền hay không nữa...<br>
     </p>
 </body>
 </html>
