--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
     <br>Hôm nay 05/10/2024: Ngày thứ 17<br>
     Có vẻ là dạo này cậu cũng khá lạnh nhạt với mình, Không biết có phải cậu thấy mình phiền hay không nữa...<br>
     <br> Ngày 06/10/2024: Ngày thứ 18<br>
+    Đêm vừa qua mình có mơ về cậu, mơ về 1 giấc mơ cũng khá đẹp đấy, mình thấy cậu có nhắn với mình 1 đoạn tin nhắn cũng khá dài và mình chỉ nhớ có dòng tin nhắn cậu nhớ là em yêu anh còn đến đoạn sau đó thì cảnh tiếp theo đã mờ nhạt rồi, mình không nhớ rõ thêm điều gì nữa và mong 2 chúng ta sẽ có 1 cuộc tình trọn vẹn...<br>
     Anh nhớ em, Kiều Ánh...Anh muốn ôm em thật lâu để nỗi nhớ em trong lòng anh được vơi đi...<br>
     </p>
 </body>
