--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@
     <br> Ngày 06/10/2024: Ngày thứ 18<br>
     Đêm vừa qua mình có mơ về cậu, mơ về 1 giấc mơ cũng khá đẹp đấy, mình thấy cậu có nhắn với mình 1 đoạn tin nhắn cũng khá dài và mình chỉ nhớ có dòng tin nhắn cậu nhớ là em yêu anh còn đến đoạn sau đó thì cảnh tiếp theo đã mờ nhạt rồi, mình không nhớ rõ thêm điều gì nữa và mong 2 chúng ta sẽ có 1 cuộc tình trọn vẹn...<br>
     Anh nhớ em, Kiều Ánh...Anh muốn ôm em thật lâu để nỗi nhớ em trong lòng anh được vơi đi...<br>
+    <br> Ngày 07/10/2024: Ngày thứ 19<br>
+    trong suốt 1 thời gian cũng khá là dài rồi mà mình không hiểu sao đêm nào cũng nằm mơ về cậu, nhưng mình chỉ nằm mơ về những dòng tin nhắn với cậu, có lẽ mình bị ám ảnh nó mất rồi, mình sợ lắm sợ 1 ngày nào đó phải rời xa cậu. Dạo này cậu cũng khá thờ ơ với mình nhỉ mình cũng có chút hụt hẫng <br>
     </p>
 </body>
 </html>
