--- a/index.html
+++ b/index.html
@@ -97,6 +97,13 @@
     Anh nhớ em, Kiều Ánh...Anh muốn ôm em thật lâu để nỗi nhớ em trong lòng anh được vơi đi...<br>
     <br> Ngày 07/10/2024: Ngày thứ 19<br>
     trong suốt 1 thời gian cũng khá là dài rồi mà mình không hiểu sao đêm nào cũng nằm mơ về cậu, nhưng mình chỉ nằm mơ về những dòng tin nhắn với cậu, có lẽ mình bị ám ảnh nó mất rồi, mình sợ lắm sợ 1 ngày nào đó phải rời xa cậu. Dạo này cậu cũng khá thờ ơ với mình nhỉ mình cũng có chút hụt hẫng <br>
+    <br> Ngày 08/10/2024: Ngày thứ 19 <br>
+    Ngày hôm nay mình thực sự rất buồn đấy, tại sao lại phải kết thúc ... Mình hối hận khi không biết tận dụng những lúc thời gian đầu để bắt đầu 1 tình yêu với cậu, mình cứ lo cho việc học của cậu mà cũng quên mất rằng cậu cũng cần được yêu cần được chia sẻ và đồng hành...<br>
+    Mình thực sự rất hụt hẫng<br>
+    Anh yêu em, Kiều Ánh<br>
+    <br> Ngày 09/10/2024: Ngày thứ 20<br>
+    Mình không muốn muốn quan hệ này phải kết thúc đâu, mình muốn nó được mãi mãi, dù mình biết điều đó dường như là rất khó khăn nhưng mình sẽ cố gắng mà, chắc bây giờ mình chỉ có thể yêu cậu trên danh nghĩa là 1 người bạn của cậu, cũng sẽ không được nói lời yêu cậu, nhớ cậu nữa, cũng sẽ không được nhắn tin trò chuyện cùng cậu nhiều như trước nữa rồi,<br>
+    Nhưng thà như vậy còn hơn là phải xa cậu. Mình chỉ mong rằng chúng ta sẽ không phải chia xa, và sau bao nhiêu gian khổ và khó khăn thì chúng ta vẫn sẽ quay về bên nhau... Anh yêu em rất nhiều, Ánh à<br>
     </p>
 </body>
 </html>
