--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@
     Sau bao nhiêu ngày và mình cũng có biết được mọi chuyện tại vì sao mối quan hệ của chúng ta lại đến nông nỗi này, thì mình cũng biết rằng là do mây tầng nào gặp gió tầng đó thôi, yêu nhau là 1 chuyện nhưng để lâu dài được với nhau và có thể sống bên nhau lại là 1 chuyện, hiện tại thì mình nhận thấy rằng mình chưa có đủ các yếu tố của 1 người đàn ông mà cậu cần<br>
     Nhưng không có nghĩa là hiện tại mình không có, mình cảm thấy mỗi thứ mình có 1 ít mà thôi có thể là do mình chưa tiếp xúc nhiều chưa va chạm nhiều nên các tính cách đó chưa có hoàn thiện, các tính cách đó cũng là điều mình hướng đến chứ không phải cậu muốn nên mình mới hướng đến đâu, bắt đầu từ sáng ngày mai mình sẽ bắt đầu nghiêm túc xây dựng các tính cách này<br>
     và xây dựng tương lai cho mình và cậu. Mình biết là hành trình này không hề dễ dàng 1 chút nào cả, mình cũng tính được 1 vài kết quả sẽ sảy ra, mình cũng có sự chuẩn bị trước mọi chuyện. Nhưng điều mình không muốn nhất là mất đi cậu mà thôi còn chuyện gì mình cũng có thể để đánh mất nó đi được mình không ngại khó ngại khổ ngại thử thách<br>
+    <br> Ngày 11/10/2024: Ngày thứ 22<br>
+    Tim mình đau quá thực sự mình không muốn rời xa cậu chút nào cả mong rằng sẽ được làm bạn của cậu và sẽ còn cơ hội để thay đổi<br>
     </p>
 </body>
 </html>
